# ta-friday

./: README.md  pyproject.toml  solution.py  test_solution.py
